# py_bash_wrapper

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
.cursor/rules/: documentation-style.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  release-from-version.yml  tag-on-version.yml  version-check.yml
docs/: FEAT-01.md  code_style.md  maintainers.md  plan.md  project_structure.md  usage_examples.md
py_bash/: __init__.py  bash_utils.py
py_bash_wrapper/: __init__.py  bash_utils.py
scripts/: verify_version_matches_tag.py
test/: test_bash_utils.py  test_bash_utils_smoke.py  test_bash_utils_user_path_integration.py  test_init.py  test_packaging.py
