# py_bash -- PEP 621 project definition.
# Canonical release version: repo-root VERSION (SemVer, no "v"); Git tags use a v prefix. See docs/maintainers.md.

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_bash"
dynamic = ["version"]
description = "Simplify the use of Bash/Shell commands in Python"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [
  { name = "Mark Rogers", email = "github@titanminds.com" },
]
keywords = ["bash", "shell", "utils"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Development Tools",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/themarkrogers/py_bash"
Repository = "https://github.com/themarkrogers/py_bash"
Issues = "https://github.com/themarkrogers/py_bash/issues"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[project.optional-dependencies]
test = [
  "coverage>=7.0.0",
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
]
dev = [
  "build>=1.0.0",
  "mypy>=1.0.0",
  "pre-commit>=4.0.0",
  "ruff>=0.11.0",
  "twine>=6.0.0",
  "types-setuptools>=82.0.0.0",
]

[tool.setuptools.packages.find]
exclude = ["assets", "build*", "contrib", "dist*", "docs", "scripts", "test*"]

[tool.mypy]
exclude = "^(build|dist)/"

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--cov=py_bash --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# E  = pycodestyle errors
# F  = Pyflakes
# I  = isort
# B  = flake8-bugbear
# UP = pyupgrade
select = ["E", "F", "I", "B", "UP"]
