# py_bash_wrapper -- PEP 621 project definition.
# Canonical release version: repo-root VERSION (SemVer, no "v"); Git tags use a v prefix. See docs/maintainers.md.

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_bash_wrapper"
dynamic = ["version"]
description = "Simplify the use of Bash/Shell commands in Python"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
license-files = ["LICENSE*"]
authors = [
  { name = "Mark Rogers", email = "github@titanminds.com" },
]
keywords = ["bash", "shell", "utils"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Shells",
  "Topic :: System :: System Shells",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/themarkrogers/py_bash_wrapper"
Repository = "https://github.com/themarkrogers/py_bash_wrapper"
Issues = "https://github.com/themarkrogers/py_bash_wrapper/issues"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[project.optional-dependencies]
test = [
  "coverage>=7.0.0",
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
]
dev = [
  "build>=1.0.0",
  "mypy>=1.0.0",
  "pre-commit>=4.0.0",
  "ruff>=0.11.0",
  "twine>=6.0.0",
  "types-setuptools>=82.0.0.0",
]

[tool.setuptools.packages.find]
exclude = ["assets", "build*", "contrib", "dist*", "docs", "scripts", "test*"]

[tool.mypy]
exclude = "^(build|dist)/"

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--cov=py_bash_wrapper --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E  = pycodestyle errors
# F  = Pyflakes
# I  = isort
# B  = flake8-bugbear
# UP = pyupgrade
select = ["E", "F", "I", "B", "UP"]
